--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+
+
 @layer base {
+  :root {
+    --primary: 270 70% 40%; /* Default purple */
+    --primary-foreground: 270 40% 98%;
+  }
+
+  .dark {
+    --primary: 270 70% 50%;
+  }
+}
+
+/* @layer base {
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
@@ -55,5 +70,5 @@
   }
   body {
     @apply bg-background text-foreground;
-  }
-}
+  } */
+/* } */
